--- a/insta_template/instagram.html
+++ b/insta_template/instagram.html
@@ -8,8 +8,7 @@
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-
+    <link rel="shortcut icon" type="image/x-icon" href="css/insta_icon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
